--- a/style.css
+++ b/style.css
@@ -4,19 +4,16 @@
   margin: 0;
   padding: 0;
 }
-
 body {
   font-family: "Open Sans";
   font-size: 14px;
 }
-
 .form-wrapper {
   width: 30%;
   margin: 0px auto;
   display: flex;
   justify-content: center;
 }
-
 .form-container {
   padding: 20px;
   width: 80%;
@@ -25,10 +22,20 @@ body {
   color: black;
   border-radius: 4px;
 }
-
 .form-content {
   align-items: center;
   margin: 10px 0px;
+}
+#form-demo{
+  border:1px solid black;
+  background-color: lightgreen;
+  position: absolute;
+  top: 200px;
+  right: 20px;
+  width: 300px;
+}
+.table-item{
+  padding:5px;
 }
 .input-content{
   color: white;
