--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ form label{
   color: white;
 }
 form input {
-  height: 25px;
+  width: 100%;
+  height: 34px;
   line-height: 25px;
   background: #fff;
   color: #000;
@@ -83,3 +84,27 @@ select{
 .alert-error{
   color: red;
 }
+#autocomplete-container form-content {
+  width: 300px;
+  margin: 50px auto;
+}
+#autocomplete-container #autocomplete-input:focus {
+  background: black;
+}
+#autocomplete-results {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  cursor:pointer;
+}
+#autocomplete-results li {
+  width: 100%;
+  padding: 20px 15px;
+  border-right: 2px solid gray;
+  border-bottom: 2px solid gray;
+  border-left: 2px solid gray;
+}
+#autocomplete-results li:hover {
+  background: black;
+}
+
